# mathematical-epidemiology

./: .gitignore  README.md  main.py  main.typ  pyproject.toml  template.typ
chapters/: 00-preface.typ  01-introduction.typ  02-sir-model.typ  03-reproduction-number.typ  04-extensions.typ  05-vaccination.typ  06-next-generation-matrix.typ  07-case-study.typ  08-conclusion.typ
notebooks/: case_study.ipynb
scripts/: fit_data.py  sir_model.jl  sir_model.py
scripts/examples/: estimate_r0.jl  estimate_r0.py  herd_immunity.jl  herd_immunity.py  ngm_symbolic.jl  ngm_symbolic.py  seir_simulation.jl  seir_simulation.py
src/mathematical_epidemiology/: fitting.py  models.py
