[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mathematical-epidemiology"
version = "0.1.0"
description = "Lecture notes for Mathematical Epidemiology"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "pandas",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mathematical_epidemiology"]
