[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mathematical-epidemiology"
version = "0.1.0"
description = "Lecture notes for Mathematical Epidemiology"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "pandas",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "notebook>=7.5.0",
    "seaborn>=0.13.2",
    "factor-analyzer>=0.5.1",
    "scikit-learn>=1.7.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mathematical_epidemiology"]
